grilo: simplify cleanup and remove sources from the grilo registry too

https://bugzilla.gnome.org/show_bug.cgi?id=770486